...
    private let menu: [[RelistenMenuItem]]
    
    public required init(artist: ArtistWithCounts, inViewController vc: UIViewController) {
        self.artist = artist
        self.viewController = vc
        
        var everything: [RelistenMenuItem] = []
        var discover: [RelistenMenuItem] = []
        let my: [RelistenMenuItem] = [.MyShowsLibrary, .RecentlyPlayed, /* .MyShowsPlaylists, */ .MyShowsDownloaded]
        
        if artist.features.years { everything.append(.EverythingYears) }
        if artist.features.songs { everything.append(.EverythingSongs) }
        if artist.features.per_show_venues || artist.features.per_source_venues {
...
